<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dimmer</string>
    <string name="action_settings">Settings</string>
	<string name="guide">Tap up and down to adjust brightness.</string>
    
	<string name="pref_auto_title">Auto Mode</string>
	<string name="pref_auto_summary">Automatically dim and brighten with environment.</string>
	<string name="pref_auto_lux_state">Current ambient light:</string>
	<string name="pref_auto_not_support">This device doesn\'t have an ambient light sensor.</string>
	<string name="pref_widget_title">Widget Mode</string>
	<string name="pref_widget_summary">Tap the icon to switch between dim and bright.</string>
	<string name="pref_widget_hint">Brightness can now be adjusted in the notification area.</string>
	<string name="pref_threshold_dim">Enter dim</string>
	<string name="pref_threshold_dim_lowest">Detect lowest ambient light.</string>
	<string name="pref_threshold_dim_set_lowest">Set lowest lux</string>
	<string name="pref_threshold_dim_lux">Ambient light</string>
	<string name="pref_threshold_bright">Return bright</string>
	<string name="pref_threshold_bright_diff">Ambient light difference</string>
	<string name="pref_speed_dim">Speed of dim response</string>
	<string name="pref_speed_bright">Speed of bright response</string>
	<string name="pref_alarm_title">Time Mode</string>
	<string name="pref_alarm_dim">Dim screen at</string>
	<string name="pref_alarm_bright">Go back to bright at</string>
	<string name="pref_alarm_off">OFF</string>
	<string name="pref_notify_title">Notification</string>
	<string name="pref_notify_priority">Hide status bar icon</string>	
	<string name="pref_notify_step">Step of adjustment</string>
	<string name="pref_notify_range">Range of adjustment</string>
	<string name="pref_notify_layout">Button arrangement</string>
	<string name="pref_notify_layout_hint">Long press button to change position.</string>
	<string name="pref_color_filter">Color filter</string>
	<string name="pref_color_picker">Color picker</string>
	<string name="pref_ap_list">Exclude app</string>
	<string name="pref_other">Other</string>
	<string name="pref_button_backlight">Disable button backlight</string>
		
</resources>
